--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <body>
     <div>
       <p>So Im starting a new blog, this is not going to be as messy as my <a href="https://AnsonGames.github.io">last one</a>, and I will try my  best not to let it get banned</p>
+      <h4>Edit: 3/5/25</h4>
+      <p>So I'm planning to move some of my games here like those 2048</p>
     </div>
   </body>
 </html>
