--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
       <p>So I'm planning to move some of my games here like those 2048</p>
     </div>
     <script type="text/javascript" color="0,0,255" opacity='0.7' zIndex="-2" count="300" src="canvas-nest-js-lib/canvas-nest.js"></script>
+    <script src="https://fastly.jsdelivr.net/npm/live2d-widgets@0/autoload.js"></script>
   </body>
 </html>
