--- a/WhosThatPokemon/index.html
+++ b/WhosThatPokemon/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-JBLD1D00GZ"></script>
+  <script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JBLD1D00GZ');
+  </script>
+
+<!-- Google 标签 (gtag.js) -->
+<script 异步 src="https://www.googletagmanager.com/gtag/js?id=G-JBLD1D00GZ"></script>
+< 脚本>
+窗口.数据层 = 窗口.数据层 || [];
+函数 gtag(){dataLayer.push(参数);}
+gtag（'js'，new Date（））;
+
+gtag（'配置'，'G-JBLD1D00GZ'）；
+</脚本>
   <meta charset="UTF-8" />
   <title>宝可梦我是谁</title>
   <link rel="stylesheet" href="style.css" />
