添加下拉框开关
应微虚大人要求

--- a/WhosThatPokemon/index.html
+++ b/WhosThatPokemon/index.html
@@ -33,6 +33,14 @@
 <p id="result"></p>
 <button onclick="loadNew()">换一个</button>
 
+<!-- 添加下拉框开关 -->
+<div style="margin-top: 10px;">
+  <label>
+    <input type="checkbox" id="datalist-toggle" checked onchange="toggleDatalist()">
+    启用输入提示下拉框
+  </label>
+</div>
+
 <script src="poke_data.js"></script>
 <script src="script.js"></script>
 </body>
