--- a/utility stuff/ChinesePokemonNameReplacer.html
+++ b/utility stuff/ChinesePokemonNameReplacer.html
@@ -3316,6 +3316,7 @@
     "Malignant Chain": "邪毒锁链",
     "Blood Moon": "血月",
     "Recharge": "恢复精力"
+    "天然雀re":"nature"
     };
 
     function replaceText() {
