--- a/UtilityStuff/CnPmNameReplacer.html
+++ b/UtilityStuff/CnPmNameReplacer.html
@@ -3315,7 +3315,8 @@
     "Upper Hand": "快手还击",
     "Malignant Chain": "邪毒锁链",
     "Blood Moon": "血月",
-    "Recharge": "恢复精力"
+    "Recharge": "恢复精力",
+    "天然雀re":"nature"
     };
 
     function replaceText() {
