--- a/UtilityStuff/CnPmNameReplacer.html
+++ b/UtilityStuff/CnPmNameReplacer.html
@@ -3316,7 +3316,8 @@
     "Malignant Chain": "邪毒锁链",
     "Blood Moon": "血月",
     "Recharge": "恢复精力",
-    "天然雀re":"nature"
+    "天然雀re":"nature",
+    "Mega ":"超级"
     };
 
     function replaceText() {
