--- a/UtilityStuff/CnPmNameReplacer.html
+++ b/UtilityStuff/CnPmNameReplacer.html
@@ -3640,7 +3640,9 @@ Leftovers=吃剩的东西</textarea>
 "Zygarde": "基格尔德",
 "Zygarde-10%": "基格尔德-10%形态",
 "Zygarde-50%": "基格尔德-50%形态",
-"Zygarde-Complete": "基格尔德-完全体形态"
+"Zygarde-Complete": "基格尔德-完全体形态",
+"Mega": "超级",
+"mega": "超级"
         };
         
         // 初始化
