Update and rename kittensGameSaveHacker.html to kittensGameSaveEditor.html

--- a/kittensGameSaveEditor.html
+++ b/kittensGameSaveEditor.html
@@ -33,63 +33,63 @@
         const translations = {
             // Resources
             "catnip": "猫薄荷",
-            "wood": "木材",
-            "minerals": "矿物",
-            "coal": "",
-            "iron": "",
-            "titanium": "",
-            "gold": "",
-            "oil": "",
-            "uranium": "",
-            "unobtainium": "",
-            "antimatter": "",
-            "manpower": "",
-            "science": "",
-            "culture": "",
-            "faith": "",
-            "kittens": "",
-            "zebras": "",
-            "starchart": "",
-            "temporalFlux": "",
-            "gflops": "",
-            "hashrates": "",
-            "furs": "",
-            "ivory": "",
-            "spice": "",
-            "unicorns": "",
-            "alicorn": "",
-            "necrocorn": "",
-            "tears": "",
-            "karma": "",
-            "paragon": "",
-            "burnedParagon": "",
-            "timeCrystal": "",
-            "sorrow": "",
-            "relic": "",
-            "void": "",
-            "elderBox": "",
-            "wrappingPaper": "",
-            "blackcoin": "",
-            "bloodstone": "",
-            "tMythril": "",
-            "beam": "",
-            "slab": "",
-            "plate": "",
-            "steel": "",
-            "concrate": "",
-            "gear": "",
-            "alloy": "",
-            "eludium": "",
-            "scaffold": "",
-            "ship": "",
-            "tanker": "",
-            "kerosene": "",
-            "parchment": "",
-            "manuscript": "",
-            "compedium": "",
-            "blueprint": "",
-            "thorium": "",
-            "megalith": "",
+            "wood": "木材",
+            "minerals": "矿物",
+            "coal": "煤",
+            "iron": "铁",
+            "titanium": "钛",
+            "gold": "黄金",
+            "oil": "石油",
+            "uranium": "铀",
+            "unobtainium": "难得素",
+            "antimatter": "反物质",
+            "manpower": "喵力",
+            "science": "科学",
+            "culture": "文化",
+            "faith": "信仰",
+            "kittens": "小猫",
+            "zebras": "斑马",
+            "starchart": "星图",
+            "temporalFlux": "时间通量",
+            "gflops": "浮点",
+            "hashrates": "哈希率",
+            "furs": "毛皮",
+            "ivory": "象牙",
+            "spice": "香料",
+            "unicorns": "独角兽",
+            "alicorn": "天角兽",
+            "necrocorn": "死灵兽",
+            "tears": "眼泪",
+            "karma": "业",
+            "paragon": "燃烧领导力",
+            "burnedParagon": "燃烧领导力",
+            "timeCrystal": "时间水晶",
+            "sorrow": "悲伤",
+            "relic": "遗物",
+            "void": "虚空产出上限",
+            "elderBox": "礼物盒",
+            "wrappingPaper": "包装纸",
+            "blackcoin": "黑币",
+            "bloodstone": "血石",
+            "tMythril": "T秘银",
+            "beam": "木梁",
+            "slab": "石板",
+            "plate": "金属板",
+            "steel": "钢",
+            "concrate": "混凝土",
+            "gear": "齿轮",
+            "alloy": "合金",
+            "eludium": "E合金",
+            "scaffold": "脚手架",
+            "ship": "船",
+            "tanker": "油轮",
+            "kerosene": "煤油",
+            "parchment": "羊皮纸",
+            "manuscript": "手稿",
+            "compedium": "概要",
+            "blueprint": "蓝图",
+            "thorium": "钍",
+            "megalith": "巨石",
             // Buildings (example)
             "field": "",
             "pasture": "",
