Update link to home page in 404.html

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
     <div>
       <h3>This is a 404 page.</h3>
       <p>Pls forgive this stupid poorly styled page. This is just for temporary usage</p>
-      <p>A 404 page means the thing or the path youre looking for is not founded on the server. You can go check <a href="index.html">home page</a> or look at what is avalible now on <a href="https://github.com/AnsonIsTheBest/AnsonIsTheBest.github.io/">github</a></p>
+      <p>A 404 page means the thing or the path youre looking for is not founded on the server. You can go check <a href="AnsonIsTheBest.github.io/index.html">home page</a> or look at what is avalible now on <a href="https://github.com/AnsonIsTheBest/AnsonIsTheBest.github.io/">github</a></p>
     </div>
   </body>
 </html>
