Remove unnecessary text in result display

--- a/UtilityStuff/Encrypt_EN.html
+++ b/UtilityStuff/Encrypt_EN.html
@@ -101,7 +101,7 @@
             }
 
 
-            resultDiv.textContent = "加密结果：" + encrypted.trim();
+            resultDiv.textContent = encrypted.trim();
             // debugDiv.textContent = "调试信息：\n" + debugInfo.join("\n");
             resultDiv.classList.add('animate-bounce');
             setTimeout(() => resultDiv.classList.remove('animate-bounce'), 300);
@@ -148,7 +148,7 @@
             }
 
 
-            resultDiv.textContent = "解密结果：" + decrypted;
+            resultDiv.textContent = decrypted;
             // debugDiv.textContent = "调试信息：\n" + debugInfo.join("\n");
             resultDiv.classList.add('animate-bounce');
             setTimeout(() => resultDiv.classList.remove('animate-bounce'), 300);
