--- a/UtilityStuff/CnPmNameReplacer.html
+++ b/UtilityStuff/CnPmNameReplacer.html
@@ -3570,7 +3570,7 @@ Leftovers=吃剩的东西</textarea>
 "Whismur": "咕妞妞",
 "Wigglytuff": "胖可丁",
 "Wiglett": "海地鼠",
-"Will-O-Wisp": "鬼火",
+"Will-O-Wisp": "磷火",
 "Wimpod": "胆小虫",
 "Wingull": "长翅鸥",
 "Wish": "祈愿",
