--- a/UtilityStuff/GPhelper.html
+++ b/UtilityStuff/GPhelper.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>高级翻译审核工具 - 增强存储版</title>
-    <script src="https://unpkg.com/diff-match-patch@2.0.2/index.js"></script>
+    <script src="diff_match_patch.js"></script>
     <style>
         :root {
             --primary-color: #1a73e8;
