--- a/ZalClient/index.html
+++ b/ZalClient/index.html
@@ -26,21 +26,21 @@ https://psim.us/dev
 <meta id="viewport" name="viewport" content="width=device-width" />
 <title>Showdown!</title>
 <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
-<link rel="shortcut icon" href="//play.pokemonshowdown.com/favicon.ico" id="dynamic-favicon" />
-<link rel="icon" sizes="256x256" href="//play.pokemonshowdown.com/favicon-256.png" />
-<link rel="stylesheet" href="//play.pokemonshowdown.com/style/battle.css?0.12835601631949323" />
-<link rel="stylesheet" href="//play.pokemonshowdown.com/style/client.css?0.4279495912705993" />
-<link rel="stylesheet" href="//play.pokemonshowdown.com/style/sim-types.css?0.6239862232037239" />
-<link rel="stylesheet" href="//play.pokemonshowdown.com/style/utilichart.css?0.058190821128816905" />
-<link rel="stylesheet" href="//play.pokemonshowdown.com/style/font-awesome.css?0.6236976454728655" />
+<link rel="shortcut icon" href="favicon.ico" id="dynamic-favicon" />
+<link rel="icon" sizes="256x256" href="favicon-256.png" />
+<link rel="stylesheet" href="style/battle.css?v1" />
+<link rel="stylesheet" href="style/client.css?v1" />
+<link rel="stylesheet" href="style/sim-types.css?v1" />
+<link rel="stylesheet" href="style/utilichart.css?v1" />
+<link rel="stylesheet" href="style/font-awesome.css?v1" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<link rel="manifest" href="/manifest.json" />
-<!--[if lte IE 8]><script>document.location.replace('http://pokemonshowdown.com/autodownload/win');</script><![endif]-->
+<link rel="manifest" href="manifest.json" />
+<!--[if lte IE 8]><script>document.location.replace('http:https://pokemonshowdown.com/autodownload/win');</script><![endif]-->
 
 <!-- head custom -->
 
 <div id="header" class="header">
-	<img class="logo" src="//play.pokemonshowdown.com/pokemonshowdownbeta.png" srcset="//play.pokemonshowdown.com/pokemonshowdownbeta@2x.png 2x" alt="Pok&eacute;mon Showdown! (beta)" width="146" height="44" /><div class="maintabbarbottom"></div>
+	<img class="logo" src="pokemonshowdownbeta.png" srcset="pokemonshowdownbeta@2x.png 2x" alt="Pok&eacute;mon Showdown! (beta)" width="146" height="44" /><div class="maintabbarbottom"></div>
 </div>
 <div class="ps-room scrollable" id="mainmenu"><div class="mainmenuwrapper">
 	<div class="leftmenu">
@@ -62,52 +62,52 @@ https://psim.us/dev
 	</div>
 	<div class="mainmenufooter">
 		<div class="bgcredit"></div>
-		<small><a href="//dex.pokemonshowdown.com/" target="_blank">Pok&eacute;dex</a> | <a href="//replay.pokemonshowdown.com/" target="_blank">Replays</a> | <a href="//pokemonshowdown.com/rules" target="_blank">Rules</a> | <a href="//pokemonshowdown.com/credits" target="_blank">Credits</a> | <a href="http://smogon.com/forums/" target="_blank">Forum</a> | <a href="//pokemonshowdown.com/privacy" target="_blank">Privacy policy</a></small>
+		<small><a href="https://dex.pokemonshowdown.com/" target="_blank">Pok&eacute;dex</a> | <a href="https://replay.pokemonshowdown.com/" target="_blank">Replays</a> | <a href="https://pokemonshowdown.com/rules" target="_blank">Rules</a> | <a href="https://pokemonshowdown.com/credits" target="_blank">Credits</a> | <a href="http://smogon.com/forums/" target="_blank">Forum</a> | <a href="https://pokemonshowdown.com/privacy" target="_blank">Privacy policy</a></small>
 	</div>
 </div></div>
 <script>
 	var LM = document.getElementById('loading-message');
 	LM.innerHTML += ' DONE<br />Loading libraries...';
 </script>
-<script nomodule src="//play.pokemonshowdown.com/js/lib/ps-polyfill.js"></script>
-<script src="//play.pokemonshowdown.com/config/config.js?3b76a129"></script>
-<script src="//play.pokemonshowdown.com/js/lib/jquery-2.2.4.min.js"></script>
-<script src="//play.pokemonshowdown.com/js/lib/jquery-cookie.js"></script>
-<script src="//play.pokemonshowdown.com/js/lib/autoresize.jquery.min.js?0.6385928871831053"></script>
-<script src="//play.pokemonshowdown.com/js/battle-sound.js?0.09509025562330531"></script>
-<script src="//play.pokemonshowdown.com/js/lib/html-css-sanitizer-minified.js?0.5162951047653968"></script>
-<script src="//play.pokemonshowdown.com/js/lib/lodash.core.js?0.9386076238968675"></script>
-<script src="//play.pokemonshowdown.com/js/lib/backbone.js?0.983172006822199"></script>
-<script src="//play.pokemonshowdown.com/js/lib/d3.v3.min.js"></script>
+<script nomodule src="js/lib/ps-polyfill.js"></script>
+<script src="config/config.js?v1"></script>
+<script src="js/lib/jquery-2.2.4.min.js"></script>
+<script src="js/lib/jquery-cookie.js"></script>
+<script src="js/lib/autoresize.jquery.min.js?v1"></script>
+<script src="js/battle-sound.js?v1"></script>
+<script src="js/lib/html-css-sanitizer-minified.js?v1"></script>
+<script src="js/lib/lodash.core.js?v1"></script>
+<script src="js/lib/backbone.js?v1"></script>
+<script src="js/lib/d3.v3.min.js"></script>
 
 <script>
 	LM.innerHTML += ' DONE<br />Loading data...';
 </script>
 
-<script src="//play.pokemonshowdown.com/js/battledata.js?0.2536024204849565"></script>
-<script src="//play.pokemonshowdown.com/js/storage.js?0.7299374348955054"></script>
-<script src="//play.pokemonshowdown.com/data/pokedex-mini.js?0.9989647891151041"></script>
-<script src="//play.pokemonshowdown.com/data/typechart.js?0.6428624251630399"></script>
-<script src="//play.pokemonshowdown.com/js/battle.js?0.8571665884262631"></script>
-<script src="//play.pokemonshowdown.com/js/lib/sockjs-1.4.0-nwjsfix.min.js"></script>
-<script src="//play.pokemonshowdown.com/js/lib/color-thief.min.js"></script>
+<script src="js/battledata.js?v1"></script>
+<script src="js/storage.js?v1"></script>
+<script src="data/pokedex-mini.js?v1"></script>
+<script src="data/typechart.js?v1"></script>
+<script src="js/battle.js?v1"></script>
+<script src="js/lib/sockjs-1.4.0-nwjsfix.min.js"></script>
+<script src="js/lib/color-thief.min.js"></script>
 
 <script>
 	LM.innerHTML += ' DONE<br />Loading client...';
 </script>
 
-<script src="//play.pokemonshowdown.com/data/commands.js?0.8488057436016891"></script>
-<script src="//play.pokemonshowdown.com/js/client.js?0.29938975651907596"></script>
-<script src="//play.pokemonshowdown.com/js/client-topbar.js?0.6662190255638427"></script>
-<script src="//play.pokemonshowdown.com/js/client-mainmenu.js?0.6328648646204393"></script>
-<script src="//play.pokemonshowdown.com/js/client-teambuilder.js?0.5104059624278074"></script>
-<script src="//play.pokemonshowdown.com/js/client-ladder.js?0.9681055357201149"></script>
-<script src="//play.pokemonshowdown.com/js/client-chat.js?0.6190564534744418"></script>
-<script src="//play.pokemonshowdown.com/js/client-chat-tournament.js?0.3200091385580419"></script>
-<script src="//play.pokemonshowdown.com/js/battle-tooltips.js?0.6324649371658397"></script>
-<script src="//play.pokemonshowdown.com/js/client-battle.js?0.7715788136764481"></script>
-<script src="//play.pokemonshowdown.com/js/client-rooms.js?0.24414472046099434"></script>
-<script src="//play.pokemonshowdown.com/data/graphics.js?0.1340106545404529"></script>
+<script src="data/commands.js?v1"></script>
+<script src="js/client.js?v1"></script>
+<script src="js/client-topbar.js?v1"></script>
+<script src="js/client-mainmenu.js?v1"></script>
+<script src="js/client-teambuilder.js?v1"></script>
+<script src="js/client-ladder.js?v1"></script>
+<script src="js/client-chat.js?v1"></script>
+<script src="js/client-chat-tournament.js?v1"></script>
+<script src="js/battle-tooltips.js?v1"></script>
+<script src="js/client-battle.js?v1"></script>
+<script src="js/client-rooms.js?v1"></script>
+<script src="data/graphics.js?v1"></script>
 
 <script>
 	// framebust - see https://owasp.org/www-pdf-archive/OWASP_AppSec_Research_2010_Busting_Frame_Busting_by_Rydstedt.pdf
@@ -121,15 +121,15 @@ https://psim.us/dev
 	}
 </script>
 
-<script src="//play.pokemonshowdown.com/data/pokedex.js?0.5893511222993231"></script>
-<script src="//play.pokemonshowdown.com/data/moves.js?0.5946822374470497"></script>
-<script src="//play.pokemonshowdown.com/data/items.js?0.7088015953025704"></script>
-<script src="//play.pokemonshowdown.com/data/abilities.js?0.6394385765219448"></script>
+<script src="data/pokedex.js?v1"></script>
+<script src="data/moves.js?v1"></script>
+<script src="data/items.js?v1"></script>
+<script src="data/abilities.js?v1"></script>
 
-<script src="//play.pokemonshowdown.com/data/search-index.js?0.7255997280714614"></script>
-<script src="//play.pokemonshowdown.com/data/teambuilder-tables.js?0.23225010979225447"></script>
-<script src="//play.pokemonshowdown.com/js/battle-dex-search.js?0.9222012081326665"></script>
-<script src="//play.pokemonshowdown.com/js/search.js?0.013615587780767546"></script>
+<script src="data/search-index.js?v1"></script>
+<script src="data/teambuilder-tables.js?v1"></script>
+<script src="js/battle-dex-search.js?v1"></script>
+<script src="js/search.js?v1"></script>
 
-<script src="//play.pokemonshowdown.com/data/aliases.js?0.25288983426477496" async></script>
-<script src="//play.pokemonshowdown.com/js/clean-cookies.php" async></script>
+<script src="data/aliases.js?v1" async></script>
+<script src="js/clean-cookies.php" async></script>
