Update title and comment in CnPmNameReplacer.html

--- a/UtilityStuff/CnPmNameReplacer.html
+++ b/UtilityStuff/CnPmNameReplacer.html
@@ -4,8 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>英文名称替换工具</title>
-    <!-- 内嵌CSS样式确保不会丢失 -->
+    <title>英文专业名词替换工具</title>
     <style>
         * {
             box-sizing: border-box;
@@ -329,6 +328,7 @@ Other: Never-Melt Ice, Booster Energy</textarea>
         </div>
         
         <!-- 词典排序工具面板 -->
+        <!--
         <div class="panel">
             <div class="panel-header">
                 <h1>词典排序工具</h1>
@@ -391,6 +391,7 @@ Leftovers=吃剩的东西</textarea>
                 </div>
             </div>
         </div>
+        -->
     </div>
     
     <script>
