--- a/UtilityStuff/CnPmNameReplacer.html
+++ b/UtilityStuff/CnPmNameReplacer.html
@@ -22,9 +22,9 @@
         }
         
         .container {
-            max-width: 1200px;
+            /* max-width: 1200px; */
             margin: 0 auto;
-            display: grid;
+            /* display: grid; */
             grid-template-columns: 1fr 1fr;
             gap: 30px;
         }
